# CoilGun-coil-simulator

./: LICENSE-coilgunsim  README.md  sample_config.json
cfemm/: CMakeLists.txt
cfemm/coilgunsim/: CMakeLists.txt  CoilGen.h  CoilGunSim.Simulation.cpp  CoilGunSim.cpp  CoilGunSim.h  FemmAPI.cpp  FemmAPI.h  FemmExtensions.h  ThreadPool.cpp  ThreadPool.h  main.cpp
cfemm/fmesher/triangle/: triangle.c
cfemm/fsolver/: fsolver.cpp  harmonic2d.cpp  harmonicaxi.cpp  static2d.cpp  staticaxi.cpp
cfemm/libfemm/: feasolver.cpp  femmversion.h  spars.cpp  stringTools.h
cfemm/libfemm/liblua/: femmcomplex.cpp
